Fix error page not showing on 404 and add a cow

--- a/client/styles/core/index.scss
+++ b/client/styles/core/index.scss
@@ -36,6 +36,7 @@ code {
   border: 0;
   overflow: auto;
   background-color: $codebox;
+  text-align: left;
 }
 
 button, .button {
